--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
+.idea
+*.iml
+*.log
+.nrepl-port
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
+*.jar
 .lein-deps-sum
 .lein-repl-history
 .lein-plugins/
 .lein-failures
-.nrepl-port
+core/
+out/
+target/
+compiled/
+misc/
+.floo
+.flooignore
+node_modules/
